  function. With that, a definitive memory leak is fixed.
 -Control codes with escape sequences are now printable characters (-p
  option). Also, the space character is now printed as SP.
 -Fixed the null dereference and consequential segfault which occurred when
  trying to create empty machines with [] and // and /a[]b/. 
 -Fixed the segfault which occured when a machine reference failed.

Ragel 5.17 - Jan 28, 2007
=========================
 -The scanners and parsers in both the frontend and backend programs were
  completely rewritten using Ragel and Kelbt.
 -The '%when condition' syntax was functioning like '$when condition'. This
  was fixed.
 -In the Vim syntax file fixes to the matching of embedding operators were
  made. Also, improvements to the sync patterns were made.
 -Added pullscan.rl to the examples directory. It is an example of doing
  pull-based scanning. Also, xmlscan.rl in rlcodegen is a pull scanner.
 -The introduction chapter of the manual was improved. The manually-drawn
  figures for the examples were replaced with graphviz-drawn figures.
 
Ragel 5.16 - Nov 20, 2006
=========================
 -Bug fix: the fhold and fexec directives did not function correctly in
  scanner pattern actions. In this context manipulations of p may be lost or
  made invalid. To fix this, fexec and fhold now manipulate tokend, which is
  now always used to update p when the action terminates.

Ragel 5.15 - Oct 31, 2006
=========================
 -A language independent test harness was introduced. Test cases can be
  written using a custom mini-language in the embedded actions. This
  mini-language is then translated to C, D and Java when generating the
  language-specific test cases.
 -Several existing tests have been ported to the language-independent format
  and a number of new language-independent test cases have been added.
 -The state-based embedding operators which access states that are not the